Math.hypot checks for infinite values prematurely https://bugs.webkit.org/show_bug.cgi?id=229843

Reviewed by Ross Kirsling.

JSTests:

* stress/math-hypot-evaluation-ordering.js: Added.
(shouldThrow):

Source/JavaScriptCore:

According to the spec[1], we should throw an error about non finite argument after coercing all arguments to doubles.

[1]: https://tc39.es/ecma262/#sec-math.hypot

* runtime/MathObject.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/241381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282081 268f45cc-cd09-0410-ab3c-d52691b4dbfc